--- a/TeaCozy.html
+++ b/TeaCozy.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Tea Cozy</title>
-<link href='./teacozy.css' rel='stylesheet'>
+    <head>
+        <title>Tea Cozy</title>
+        <link href='./teacozy.css' rel='stylesheet'>
 </head>
 <body>
-
-
-
+        <div class="header">
+        <img class="logo" src="./teacozylogo.png">
+    </div>
+    <div class="background">
+        <div class="bgtext">
+        <h2> Our Mission</h2>
+        <h4> Handpicked, Artisanally Curated, Free Range, Sustainable, Small Bach, Fair Trade, Organic Tea </h4>
+    </div>
 
 </body>
 
