Tea of the Month section
Added tea of the month section and used Flexbox properties to line up the pictures as shown on the wireframe

--- a/TeaCozy.html
+++ b/TeaCozy.html
@@ -8,11 +8,29 @@
         <div class="header">
         <img class="logo" src="./teacozylogo.png">
     </div>
-    <div class="background">
-        <div class="bgtext">
-        <h2> Our Mission</h2>
-        <h4> Handpicked, Artisanally Curated, Free Range, Sustainable, Small Bach, Fair Trade, Organic Tea </h4>
+    <div class="backgroundimg">
+        <img src="./background.jpeg">
+        <div class="ourmission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Bach, Fair Trade, Organic Tea </h4>
     </div>
+    </div>
+
+    <div class="teaofthemonth">
+        <h2> Tea of the Month</h2>
+        <h4> What's Steeping at The Tea Cozy </h4>  
+
+        <div class="container">
+        <img class="image" src="./fallberryblitz.jpeg">
+        <img class="image" src="./spicedrum.jpeg">
+        <img class="image" src="./donut.jpeg">
+        <div class="container-2">
+        <img class="image2" src="./martylavetea.jpeg">
+        <img class="image2" src="./bedfordtea.jpeg">
+        </div>
+    </div>
+
+    
 
 </body>
 
