Notation to Tea of the Month pictures
Added notation to the tea of the month section and added comments to my code

--- a/TeaCozy.html
+++ b/TeaCozy.html
@@ -5,6 +5,8 @@
         <link href='./teacozy.css' rel='stylesheet'>
 </head>
 <body>
+    
+    <!-- Header and Main Background -->
         <div class="header">
         <img class="logo" src="./teacozylogo.png">
     </div>
@@ -16,18 +18,34 @@
     </div>
     </div>
 
+ <!-- Tea of The Month section  -->
     <div class="teaofthemonth">
         <h2> Tea of the Month</h2>
         <h4> What's Steeping at The Tea Cozy </h4>  
 
         <div class="container">
-        <img class="image" src="./fallberryblitz.jpeg">
-        <img class="image" src="./spicedrum.jpeg">
-        <img class="image" src="./donut.jpeg">
-        <div class="container-2">
-        <img class="image2" src="./martylavetea.jpeg">
-        <img class="image2" src="./bedfordtea.jpeg">
+            <div>
+                <img class="image" src="./fallberryblitz.jpeg">
+                <p class="fallberryblitz">Fall Berry Blitz</p>
+            </div>
+            <div>
+                <img class="image" src="./spicedrum.jpeg">
+                <p class="spicedrum">Spiced Rum</p>
+            </div>
+        <div>
+            <img class="image" src="./donut.jpeg">
+            <p class="Donut">Seasonal Donuts</p>
         </div>
+        <div class="container-2">
+        <div>
+            <img class="image2" src="./martylavetea.jpeg">
+            <p class="MyrtleAveTea">Myrtle Ave Tea</p>
+        </div>
+        <div>
+            <img class="image2" src="./bedfordtea.jpeg">   
+            <p class="BedfordTea">Bedford Bizzare Tea</p>
+        </div>
+            </div>
     </div>
 
     
