Location section, footer and header
Created the location section, footer and started working on completing the header section.

Location title needs to be adjusted to match wireframe.

--- a/TeaCozy.html
+++ b/TeaCozy.html
@@ -5,10 +5,14 @@
         <link href='./teacozy.css' rel='stylesheet'>
 </head>
 <body>
-    
+
     <!-- Header and Main Background -->
         <div class="header">
         <img class="logo" src="./teacozylogo.png">
+        <div class="headerlinks">
+        <p class="mission">Mission</p>
+        <p class=featuredtea>Featured Tea</p>
+    </div>
     </div>
     <div class="backgroundimg">
         <img src="./background.jpeg">
@@ -48,7 +52,51 @@
             </div>
     </div>
 
-    
+ <!-- Locations  -->   
+
+ <div class="location-title"> <h1>Locations</h1> </div>
+
+<div class="location-container">
+<div class="downtown">
+    <h3>Downtown</h3>
+    <p>384 West 4th St</p>
+    <p>Suite 108</p>
+    <p>Portland, Maine</p>
+</div>
+
+<div class="eastbayside">
+    <h3>East Bayside</h3>
+    <p>3433 Phisherman's Avenue</p>
+    <p>(Northwest Corner)</p>
+    <p>Portland, Maine</p>
+</div>
+
+<div class="oakdale">
+    <h3>Oakdale</h3>
+    <p>515 Crescent Avenue</p>
+    <p>Second Floor</p>
+    <p>Portland, Maine</p>
+</div>
+</div>
+
+ <!-- Footer  -->   
+<div class="footer">
+ <p> The Tea Cozy </p>
+ <p>contact@theteacozy.com</p>
+ <p>917-555-8904</p>
+
+</div>
+
+<div class="copyright">
+    <h5>copyright The Tea Cozy 2017</h5>
+</div>
+
+
+
+
+
+
+
 
 </body>
 
